--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "fs-extra": "^0.23.1",
     "glob": "^5.0.14",
-    "intern": "^3.0.0",
+    "intern": "https://github.com/theintern/intern.git",
     "mkpath": "^0.1.0",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.0"
